package com.company;

public interface Car
{
    // Items are pr. default public
    String getRegistrationNumber();
    String getMake();
    String getModel();
    String getFuelType();
    int getNumberOfDoors();
    int getRegistrationFee();

}
